<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragmentHome"
        android:title="@string/home_label"
        android:enabled="true"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/actionFood"
        android:title="@string/food_label"
        android:enabled="true"
        android:icon="@drawable/ic_food" />

    <item
        android:id="@+id/actionExercise"
        android:title="@string/exercise_label"
        android:enabled="true"
        android:icon="@drawable/ic_exercise" />

    <item
        android:id="@+id/actionAnalytics"
        android:title="@string/analytics_label"
        android:enabled="true"
        android:icon="@drawable/ic_analytics" />

    <item
        android:id="@+id/actionProfile"
        android:title="@string/profile_label"
        android:enabled="true"
        android:icon="@drawable/ic_profile" />

</menu>