<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <PreferenceCategory app:title="@string/customization">-->
<!--        <ListPreference-->
<!--            app:defaultValue="-1"-->
<!--            app:entries="@array/theme_entries"-->
<!--            app:entryValues="@array/theme_values"-->
<!--            app:key="theme"-->
<!--            app:title="@string/set_theme"-->
<!--            app:useSimpleSummaryProvider="true"-->
<!--            app:singleLineTitle="true"-->
<!--            app:icon="@drawable/ic_theme" />-->
<!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/memory">
        <Preference
            app:key="cache"
            app:title="@string/clear_cache"
            app:summary="@string/clear_cache_desc"
            app:singleLineTitle="true"
            app:icon="@drawable/ic_cache" />
    </PreferenceCategory>

</PreferenceScreen>