<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".FragmentProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragment_label"
            style="@style/Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/profile_label"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textColor="?attr/colorError"
            app:icon="@drawable/ic_power"
            app:iconTint="?attr/colorError"
            app:layout_constraintBottom_toBottomOf="@id/fragment_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_header">

        <TextView
            style="@style/Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            tools:text="Cristiano Ronaldo" />

        <TextView
            style="@style/Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/change_password" />

        <TextView
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_password" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="?attr/colorSurface"
            app:boxStrokeColor="@color/gray"
            app:hintEnabled="false">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="no"
                android:background="@android:color/transparent"
                android:hint="@string/hint_current_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="?attr/colorSurface"
            app:boxStrokeColor="@color/gray"
            app:hintEnabled="false">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="no"
                android:background="@android:color/transparent"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="?attr/colorSurface"
            app:boxStrokeColor="@color/gray"
            app:hintEnabled="false">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="no"
                android:background="@android:color/transparent"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="?attr/colorSecondaryVariant"
            android:text="@string/save"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="?attr/colorOnSecondary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>