<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.patients.EditPatientFragment"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPatientNameEdit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="?attr/colorSurface"
            app:boxStrokeColor="@color/gray"
            android:layout_marginEnd="10dp"
            app:hintEnabled="false">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="no"
                android:background="@android:color/transparent"
                android:hint="@string/patient_name_placeholder"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewAgeEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/age" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPatientNameAgeEdit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="?attr/colorSurface"
            app:boxStrokeColor="@color/gray"
            android:layout_marginEnd="10dp"
            app:hintEnabled="false">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="no"
                android:background="@android:color/transparent"
                android:hint="@string/patient_age_placeholder"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewObjectiveEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/objective" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPatientGoalEdit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="?attr/colorSurface"
            app:boxStrokeColor="@color/gray"
            android:layout_marginEnd="10dp"
            app:hintEnabled="false">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="no"
                android:background="@android:color/transparent"
                android:hint="@string/patient_objective_placeholder"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/accept_buttonEdit"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSecondaryVariant"
        android:textColor="?attr/colorOnSecondary"
        android:text="@string/save" />

</androidx.constraintlayout.widget.ConstraintLayout>