<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentExercise"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/exercise_toolbar"
        style="@style/Headline6"
        android:textColor="?attr/colorSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:src="@drawable/ic_workout" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/congrats"
            style="@style/Headline5"
            android:gravity="center"
            android:textColor="?attr/colorSecondary" />

        <TextView
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:text="@string/empty_exercise"
            style="@style/Headline6"
            android:gravity="center"
            android:textColor="?attr/colorSecondary" />

    </LinearLayout>

</LinearLayout>