<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:background="@color/light_bg" >

    <ImageView
        android:layout_width="132dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:scaleType="center"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="76dp"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_short"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/black"/>

    <TextView
        android:layout_marginTop="76dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email"
        android:textColor="@color/dark_gray"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
    />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userEmail"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@color/pure_white"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/gray">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:autofillHints="no"
            android:hint="@string/hint_email"
            android:textColorHint="@color/gray"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password"
        android:textColor="@color/dark_gray"
        style="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userPassword"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:background="@color/pure_white"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/gray">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:autofillHints="no"
            android:hint="@string/hint_password"
            android:textColorHint="@color/gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="40dp"
        android:onClick="login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"
        app:cornerRadius="25dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold" />

</LinearLayout>